Updated link in HTML

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast" id="forecast"></div>
       </main>
+      <div class="weather-forecast" id="forecast"></div>
 
       <footer>
         This project was coded by
@@ -57,7 +57,7 @@
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://main--wk8weathersc.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
